<resources>
    <string name="app_name">Compliance Reminder</string>
    <string name="notificationChannelId">Compliance Reminder</string>

    //Login
    <string name="mobileNumber">Mobile Number</string>
    <string name="login">Login</string>
    <string name="invalid_number">Invalid mobile number</string>

    //Create Account
    <string name="createAccount">Create Account</string>
    <string name="name">Name*</string>
    <string name="firmName">Firm Name*</string>
    <string name="accountType">Account Type*</string>
    <string name="mobileNumberAccount">Mobile Number*</string>
    <string name="whatsappNumber">Whatsapp Number</string>
    <string name="email">Email*</string>
    <string name="address">City*</string>
    <string name="you_will_get_otp">You will get an OTP on this number.</string>
    <string name="accept_terms_msg">By creating an account, you agree to our  <a href="terms:">terms and conditions</a></string>
    <string name="name_required"> Name required</string>
    <string name="firm_name_required">Firm Name required</string>
    <string name="account_type_required">Account Type required</string>
    <string name="invalid_whatsapp_number">Invalid whatsapp number</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="enter_full_address">City required</string>
    <string name="select_notification_categories">Select Notification Category</string>
    <string name="firm_name_helper_text"> Firm name will be used in SMS. Should be unique and Max 30 characters allowed.</string>

    //OTP Verification
    <string name="sentOTPto">OTP sent to </string>
    <string name="verify_proceed">Verify and Proceed</string>
    <string name="phone_verification">Phone verification</string>
    <string name="invalid_code">Invalid code</string>
    <string name="resend_code">Resend Code</string>

    //Edit Account
    <string name="editAccount">Edit Account</string>
    <string name="saveChanges">Save Changes</string>

    //Home
    <string name="home">Home</string>

    //Terms and condition
    <string name="terms_and_condition">Terms and Conditions</string>

    //Logout
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logoutAlertMessage">Are ou sure you want to logout?</string>

    //
    <string name="Ok">Ok</string>
    <string name="send">Send</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_data_found">No Data Found</string>
    <string name="Search">Search</string>
    <string name="select_all">Select All</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    //Navigation Drawer
    <string name="menu_home">News &amp; Updates</string>
    <string name="menu_client">My Clients</string>
    <string name="menu_notification">Send Messages</string>
    <string name="menu_import_client">Import Clients</string>
    <string name="menu_my_balance">My Balance</string>
    <string name="menu_notification_templates">Notification Templates</string>

    <string name="menu_contact_us">Contact us</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_about_app">About app</string>
    <string name="menu_app_features">App features</string>
    <string name="menu_terms_and_conditions">Terms and conditions</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_reminder_report">Reminder Report</string>

    //Add Client
    <string name="submit">Submit</string>
    <string name="add_client">Add Client</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_template">Select Message</string>

    //Notification Categories
    <string name="notification_categories">Notification Categories</string>

    //Edit Client
    <string name="edit_client">Edit Client</string>

    <string name="uploadCsvFile">Upload CSV File</string>
    <string name="selectCsvFile">Select CSV File</string>

    //Notification Templates
    <string name="notification_templates">Notification Templates</string>

    //Client Details
    <string name="client_details">Client Details</string>

    //App Update
    <string name="new_version_available">New version available</string>
    <string name="VersionUpdateMessage">Please, update app to new version .</string>
    <string name="Update">Update</string>


    <string name="send_sms">Send SMS</string>
    <string name="send_message">Send Message</string>
    <string name="send_email">Send Email</string>
    <string name="total_clients">"Total Clients  : "</string>
    <string name="select_message">Select Message</string>

    <string name="delete_client_message">Are you sure ? \n Do you want to delete this client ?</string>
    <string name="no_clients_found">No Clients Found</string>

    //Contact Us
    <string name="business_email">For business queries</string>
    <string name="app_email">For Queries &amp; suggestions related to App</string>
    <string name="customer_care">For Customer Care Call</string>
    <string name="enter_feedback">Enter your feedback</string>
    <string name="send_feedback">Send Feedback</string>

</resources>