<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.CreateAccountActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/toolbar_layout"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nsEditClient"
            android:visibility="gone"
            android:padding="@dimen/spacing_mlarge">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Name-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--Email-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--Mobile Number-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/spacing_middle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobileNumberAccount"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--Whatsapp Number-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietWhatsappNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/whatsappNumber"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--Address-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textMultiLine"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- categories-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_notification_categories"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:visibility="visible"
                    android:hint="@string/notification_categories"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNotificationCategories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|none"
                        android:editable="false"
                        android:focusable="false"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
                        android:singleLine="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <!--Create Account Button-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/submit"
                    style="@style/primaryDarkBackgroundButton"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/spacing_middle"/>




            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <include layout="@layout/item_loading_layout"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>