<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ImportClientCsvFileActivity1">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/toolbar_layout"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llImportClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="@dimen/spacing_mlarge">

            <TextView
                android:background="?selectableItemBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_80"
                android:id="@+id/tvCsvFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectCsvFile"
                android:layout_marginBottom="20dp"
                />

            <!-- Select Categories-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_categories"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/select_categories"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:editable="false"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
                    android:clickable="true"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Upload CSV File-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUploadCsvFile"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/uploadCsvFile"
                style="@style/primaryDarkBackgroundButton"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/spacing_middle"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>



    <include layout="@layout/item_loading_layout"/>
    <include layout="@layout/no_data_found_layout"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>